--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,3 +27,15 @@ a,
     place-items: center;
   }
 }
+
+.headline {
+  font-size: 3em;
+}
+
+.color-green {
+  color: hsla(160, 100%, 37%, 1);
+}
+
+.cursive {
+  font-style: italic;
+}
